# pixellar

./: .gitignore  .gitmodules  Cargo.toml  Makefile  copyright
.github/: readme.md
crates/lime/: Cargo.toml
crates/lime/src/: address.rs  args.rs  crypto.rs  lib.rs  main.rs  server.rs
crates/lime/src/data/: item.rs  mod.rs
crates/lime/src/data/player/: data.rs  inv.rs  mod.rs
crates/lime/src/data/world/: active.rs  mod.rs
crates/lime/src/packet/: mod.rs  packet.rs  type.rs
crates/lime/src/utils/: bunny.rs  mod.rs  version.rs
crates/server/: Cargo.toml
crates/server/src/: args.rs  main.rs
examples/client/src/: main.rs
