[package]
name = "lime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
enet = { path = "../enet" }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.17"
pickledb = "0.5.1"
pika = "0.1.3"
serde = "1.0.159"
serde_json = "1.0.95"
strip-ansi-escapes = "0.1.1"
