[package]
name = "lime"
version = "0.0.1"
edition = "2021"
description = "Game server written in Rust and ENet"
authors = ["riyuzenn <riyuzenn@pm.me>"]
license = "GPL-3.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
colored = "2.0.0"
ecies-ed25519 = "0.5.1"
log = "0.4.17"
pickledb = "0.5.1"
pika = "0.1.3"
serde = { version = "1.0.159", features=["derive"]}
serde_json = "1.0.95"
strip-ansi-escapes = "0.1.1"

[dependencies.enet]
git = "https://github.com/riyuzenn/enet-rs"
