[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
anyhow = "1.0.70"
log = "0.4.17"
lime = { path = "../lime" }
chrono = "0.4.24"
fern = { version = "0.6.2", features = ["colored"] }
clap = { version = "4.2.1", features = ["derive"] }
